--- a/Movie_Project/fresh_tomatoes.html
+++ b/Movie_Project/fresh_tomatoes.html
@@ -104,34 +104,34 @@
     </div>
     <div class="container">
       
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="aJ-sxaxkoD4" data-toggle="modal" data-target="#trailer">
-    <img src="C:\Users\Hp\Desktop\repos\Full_Stack_Web_Developer_1_Nanodegree\Movie_Project\img\b.jpg" width="220" height="342">
-    <h2>Border</h2>
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="N0ITWaDAcME" data-toggle="modal" data-target="#trailer">
+    <img src="img\ff.jpg" width="220" height="342">
+    <h2>Fast and Furious</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="K1KPcXRMMo4" data-toggle="modal" data-target="#trailer">
-    <img src="C:\Users\Hp\Desktop\repos\Full_Stack_Web_Developer_1_Nanodegree\Movie_Project\img\hp.jpg" width="220" height="342">
+    <img src="img\hp.jpg" width="220" height="342">
     <h2>Harry Potter</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="XVu5126oPqU" data-toggle="modal" data-target="#trailer">
-    <img src="C:\Users\Hp\Desktop\repos\Full_Stack_Web_Developer_1_Nanodegree\Movie_Project\img\l.jpg" width="220" height="342">
+    <img src="img\l.jpg" width="220" height="342">
     <h2>Lakshya</h2>
 </div>
 
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="aJ-sxaxkoD4" data-toggle="modal" data-target="#trailer">
+    <img src="img\b.jpg" width="220" height="342">
+    <h2>Border</h2>
+</div>
+
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="B27zvZRfeSo" data-toggle="modal" data-target="#trailer">
-    <img src="C:\Users\Hp\Desktop\repos\Full_Stack_Web_Developer_1_Nanodegree\Movie_Project\img\s.jpg" width="220" height="342">
+    <img src="img\s.jpg" width="220" height="342">
     <h2>Sarkar 3</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="8hYlB38asDY" data-toggle="modal" data-target="#trailer">
-    <img src="C:\Users\Hp\Desktop\repos\Full_Stack_Web_Developer_1_Nanodegree\Movie_Project\img\im.jpg" width="220" height="342">
+    <img src="img\im.jpg" width="220" height="342">
     <h2>Sarkar 3</h2>
-</div>
-
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="N0ITWaDAcME" data-toggle="modal" data-target="#trailer">
-    <img src="C:\Users\Hp\Desktop\repos\Full_Stack_Web_Developer_1_Nanodegree\Movie_Project\img\ff.jpg" width="220" height="342">
-    <h2>Fast and Furious</h2>
 </div>
 
     </div>
