python pip8 format

--- a/Movie_Project/fresh_tomatoes.html
+++ b/Movie_Project/fresh_tomatoes.html
@@ -13,6 +13,7 @@
     <style type="text/css" media="screen">
         body {
             padding-top: 80px;
+            background-color: rgba(200,200,200,1);
         }
         #trailer .modal-dialog {
             margin-top: 200px;
@@ -106,32 +107,68 @@
       
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="N0ITWaDAcME" data-toggle="modal" data-target="#trailer">
     <img src="img\ff.jpg" width="220" height="342">
-    <h2>Fast and Furious</h2>
+    <h2>
+        Fast and Furious
+    <br>
+        606/10 IMDb rating
+    <br>
+     3 April 2009
+    </h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="K1KPcXRMMo4" data-toggle="modal" data-target="#trailer">
     <img src="img\hp.jpg" width="220" height="342">
-    <h2>Harry Potter</h2>
+    <h2>
+        Harry Potter
+    <br>
+        7.6/10 IMDb rating
+    <br>
+    12 April 2002 (India)
+    </h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="XVu5126oPqU" data-toggle="modal" data-target="#trailer">
     <img src="img\l.jpg" width="220" height="342">
-    <h2>Lakshya</h2>
+    <h2>
+        Lakshya
+    <br>
+        7.9 IMDb rating
+    <br>
+    18 June 2004 (India)
+    </h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="aJ-sxaxkoD4" data-toggle="modal" data-target="#trailer">
     <img src="img\b.jpg" width="220" height="342">
-    <h2>Border</h2>
+    <h2>
+        Border
+    <br>
+        7.9/10 IMDb rating
+    <br>
+    13 June 1997 (India)
+    </h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="B27zvZRfeSo" data-toggle="modal" data-target="#trailer">
     <img src="img\s.jpg" width="220" height="342">
-    <h2>Sarkar 3</h2>
+    <h2>
+        Sarkar 3
+    <br>
+        4.8/10 IMDb rating
+    <br>
+     12 May 2017 (India)
+    </h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="8hYlB38asDY" data-toggle="modal" data-target="#trailer">
     <img src="img\im.jpg" width="220" height="342">
-    <h2>Sarkar 3</h2>
+    <h2>
+        Iron Man
+    <br>
+        7.9/10 IMDb rating
+    <br>
+    1 May 2008 (India)
+    </h2>
 </div>
 
     </div>
